@@ -1,3 +1,8 @@
+2003-12-08  Justin F. Hallett  <thesin@users.sourceforge.net>
+
+	* Engine.pm: Properly fixed essential and builddependsonly checks in
+	cmd_remove.
+
 2003-12-07  Justin F. Hallett  <thesin@users.sourceforge.net>
 
 	* PkgVersion.pm: Added force switch to resolve_depends so duplicate
